...
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tools" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3q-JZ-cQk">
                                            <rect key="frame" x="50" y="0.0" width="230.5" height="43"/>
                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iym-fW-Czt">
                                            <rect key="frame" x="56.5" y="11" width="230.5" height="22"/>
                                            <accessibility key="accessibilityConfiguration" identifier="money"/>
                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Transactions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PRr-jE-kcp">
                                                    <rect key="frame" x="15" y="0.0" width="270" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Insights" id="HyR-0t-8hd">
                        <barButtonItem key="rightBarButtonItem" title="Profile" id="aDu-2d-nLf">
                            <connections>
...
                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                        <size key="titleShadowOffset" width="1" height="1"/>
                                        <state key="normal" title="Earning">
                                            <color key="titleColor" red="0.97741711750477334" green="1" blue="0.94736698123327479" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                        <size key="titleShadowOffset" width="1" height="1"/>
                                        <state key="normal" title="Expense">
                                            <color key="titleColor" red="0.99028712242288464" green="1" blue="0.96957155601853584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                            </constraints>
                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                            <state key="normal" title="Add another currency"/>
                                            <variation key="default">
                                                <mask key="constraints">
...
            <objects>
                <navigationController storyboardIdentifier="NavConverter" automaticallyAdjustsScrollViewInsets="NO" id="ZSM-wV-hDo" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Converter" image="icon_converter" id="e42-NY-80F"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="514-jI-1MB">
...
            <objects>
                <navigationController storyboardIdentifier="NavNumpad" automaticallyAdjustsScrollViewInsets="NO" id="opo-CJ-qd0" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Add" image="icon_add" id="OLP-8p-Qoi"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="2i4-cn-Gh6">
...
