...
		}
	}
	
	

	override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
		let delete = UITableViewRowAction(style: .destructive, title: "Delete".localized) { (action, indexPath) in
			self.deleteCategory(indexPath: indexPath)
		}
		
		let edit = UITableViewRowAction(style: .normal, title: "Edit".localized) { (action, indexPath) in
			self.showEditCateory(indexPath: indexPath)
		}
...
