...
				currencyData.value(forKey: "code") as! String,
				rate: Float(rate),
				flag: flagPngData
			)
			if currency != nil {
				currency!.popularity = Float(currencyData.value(forKey: "is_popular") as! String)!
				if (currency!.code == "USD" || currency!.code == "EUR") {
					currency!.popularity = currency!.popularity + 1
				}
			}
		}
	}
	
...
